# repo-A

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: a.yaml  build.yaml  main.yaml  notify-manager.yaml  on-merge-to-dev.yaml  on-pull-request.yaml  on-submodule-update.yaml  promote-rc.yaml
include/: a.hpp
src/: a.cpp  main.cpp
tests/: a.test.cpp
